# illumio-pretty-cool-events

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  entry.sh  main.py  pce.py  pyproject.toml  requirements.txt
.claude/commands/: create-plugin.md
.github/workflows/: main.yml
docs/: pagerduty.output
pretty_cool_events/: __init__.py  __main__.py  cli.py  config.py  enrichment.py  event_grouper.py  event_loop.py  label_resolver.py  pce_client.py  plugin_meta.py  service.py  stats.py  throttle.py  watcher.py
pretty_cool_events/data/: event_types.yaml  runbooks.yaml
pretty_cool_events/plugins/: __init__.py  aws_lambda.py  base.py  email.py  file.py  githubissue.py  jira_plugin.py  line.py  mattermost.py  opsgenie.py  pagerduty.py  servicenow.py  slack.py  sns.py  stdout.py  syslog.py  teams.py  telegram.py  webhook.py
pretty_cool_events/templates/: _macros.html  alert.tmpl  chat-markdown.html  default-teams.tmpl  default.html  email-full.html  email-security.html  github-issue.tmpl  jira.tmpl  json-lines.html  one.html  traffic-alert.html  traffic-chat.html  traffic-email.html  verify.html  (+7 more)
src/: ContentPlugin.py  execplugin.py  foo.js  main.py  outputplugin.py  pretty-cool-events  sample.events
templates/: base.html  default-json.html  default-slack.html  default-teams.tmpl  default.html  email.tmpl  rule_set.create.jira.tmpl  sms.tmpl
tests/: conftest.py  test_cli.py  test_config.py  test_enrichment.py  test_event_grouper.py  test_event_loop.py  test_label_resolver.py  test_pce_client.py  test_stats.py  test_throttle.py  test_watcher.py
(+40 files in other folders)
